--- a/Dockerfile.train
+++ b/Dockerfile.train
@@ -1,6 +1,11 @@
 FROM 763104351884.dkr.ecr.us-east-1.amazonaws.com/tensorflow-training:2.12.0-cpu-py310
 
-ADD ./main.py /opt/ml/code/main.py
+# Copia il file requirements.txt nel container
+COPY requirements.txt /opt/ml/code/requirements.txt
 
+# Installa i pacchetti
+RUN pip install -r /opt/ml/code/requirements.txt
+
+ADD ./main.py /opt/ml/code/main.py
 ENV SAGEMAKER_PROGRAM main.py
 
